--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="icon featured fa-comments"></span>
-						<h3>Consequat lorem</h3>
+						<h3>Python</h3>
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
 							dolore.</p>
 					</section>
@@ -62,7 +62,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="icon solid featured fa-camera-retro"></span>
-						<h3>Lorem dolor tempus</h3>
+						<h3>Javascript</h3>
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
 							dolore.</p>
 					</section>
@@ -70,7 +70,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="icon featured fa-thumbs-up"></span>
-						<h3>Feugiat posuere</h3>
+						<h3>HTML&CSS</h3>
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
 							dolore.</p>
 					</section>
@@ -78,7 +78,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="icon featured fa-thumbs-up"></span>
-						<h3>Feugiat posuere</h3>
+						<h3>Java</h3>
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
 							dolore.</p>
 					</section>
@@ -86,7 +86,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="icon featured fa-thumbs-up"></span>
-						<h3>Feugiat posuere</h3>
+						<h3>C#</h3>
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
 							dolore.</p>
 					</section>
@@ -94,7 +94,39 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="icon featured fa-thumbs-up"></span>
-						<h3>Feugiat posuere</h3>
+						<h3>C</h3>
+						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+							dolore.</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span class="icon featured fa-thumbs-up"></span>
+						<h3>Elixir</h3>
+						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+							dolore.</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span class="icon featured fa-thumbs-up"></span>
+						<h3>SQL</h3>
+						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+							dolore.</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span class="icon featured fa-thumbs-up"></span>
+						<h3>Git</h3>
+						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+							dolore.</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span class="icon featured fa-thumbs-up"></span>
+						<h3>Assembly</h3>
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
 							dolore.</p>
 					</section>
