--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<style>
+		.work-icons {
+			width: 10rem;
+		}
+	</style>
 </head>
 
 <body class="is-preload">
@@ -53,82 +58,72 @@
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-comments"></span>
+						<img src="images/python.png" class="work-icons">
 						<h3>Python</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<p>Decent language. Easy to write code in and fast deployment.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon solid featured fa-camera-retro"></span>
+						<img src="images/javascript.png" class="work-icons">
 						<h3>Javascript</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<p>Most buggy language ever. Why do we use this?</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-thumbs-up"></span>
+						<img src="images/html.png" class="work-icons">
 						<h3>HTML&CSS</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<p>CSS is difficult</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-thumbs-up"></span>
+						<img src="images/java.png" class="work-icons">
 						<h3>Java</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<p>Please, no more classes. I beg you!</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-thumbs-up"></span>
+						<img src="images/c-sharp.png" class="work-icons">
 						<h3>C#</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<p>Better version of Java.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-thumbs-up"></span>
+						<img src="images/c-programming.png" class="work-icons">
 						<h3>C</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<p>GOAT of programming languages.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-thumbs-up"></span>
+						<img src="images/elixir.png" class="work-icons">
 						<h3>Elixir</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<p>Awesome programming language. Very fun to code in.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-thumbs-up"></span>
+						<img src="images/sql.png" class="work-icons">
 						<h3>SQL</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<p>Gotta have databases.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-thumbs-up"></span>
+						<img src="images/git.png" class="work-icons">
 						<h3>Git</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<p>Can't code without Git.</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span class="icon featured fa-thumbs-up"></span>
+						<img src="images/assembly.png" class="work-icons">
 						<h3>Assembly</h3>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-							dolore.</p>
+						<p>When C doesn't cut it, you can use Assembly.</p>
 					</section>
 				</div>
 			</div>
@@ -144,28 +139,28 @@
 		<div class="container">
 			<header>
 				<h2>Here’s some stuff I made recently.</h2>
-				<p>Proin odio consequat sapien vestibulum consequat lorem dolore feugiat.</p>
+				<p>Press on header to get to GitHub repository for each project.</p>
 			</header>
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/raspberry.jpg" alt="" /></a>
-						<h3><a href="#">Self-Watering Plant</a></h3>
+						<a href="https://github.com/thelizri/PotBot" class="image featured"><img src="images/raspberry.jpg" alt="" /></a>
+						<h3><a href="https://github.com/thelizri/PotBot">Self-Watering Plant</a></h3>
 						<p>IoT project to create a self-watering plant. Plant is put into a put that will water it for
 							you. Can choose different settings on the website.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/bookclub.jpg" alt="" /></a>
-						<h3><a href="#">Book Club Website</a></h3>
+						<a href="https://github.com/thelizri/BookClubWebsite" class="image featured"><img src="images/bookclub.jpg" alt="" /></a>
+						<h3><a href="https://github.com/thelizri/BookClubWebsite">Book Club Website</a></h3>
 						<p>A website for organizing book clubs.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pacman.jpg" alt="" /></a>
-						<h3><a href="#">Pacman on Microcontroller</a></h3>
+						<a href="https://github.com/thelizri/PacmanHardwareEngineering" class="image featured"><img src="images/pacman.jpg" alt="" /></a>
+						<h3><a href="https://github.com/thelizri/PacmanHardwareEngineering">Pacman on Microcontroller</a></h3>
 						<p>A small pacman game built on a microcontroller.</p>
 					</article>
 				</div>
