--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 					<hr />
 					<h3>Find me on ...</h3>
 					<ul class="social">
-						<li><a href="https://github.com/thelizri" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://www.linkedin.com/in/william-c-779a63244/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/william-c-779a63244/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/thelizri" class="icon brands fa-github"><span class="label">Github</span></a></li>
 					</ul>
 					<hr />
 				</div>
