--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="https://github.com/thelizri/PotBot" class="image featured"><img src="images/raspberry.jpg" alt="" /></a>
+						<a href="https://github.com/thelizri/PotBot" class="image featured"><img
+								src="images/raspberry.jpg" alt="" /></a>
 						<h3><a href="https://github.com/thelizri/PotBot">Self-Watering Plant</a></h3>
 						<p>IoT project to create a self-watering plant. Plant is put into a put that will water it for
 							you. Can choose different settings on the website.</p>
@@ -152,15 +153,18 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="https://github.com/thelizri/BookClubWebsite" class="image featured"><img src="images/bookclub.jpg" alt="" /></a>
+						<a href="https://github.com/thelizri/BookClubWebsite" class="image featured"><img
+								src="images/bookclub.jpg" alt="" /></a>
 						<h3><a href="https://github.com/thelizri/BookClubWebsite">Book Club Website</a></h3>
 						<p>A website for organizing book clubs.</p>
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
-						<a href="https://github.com/thelizri/PacmanHardwareEngineering" class="image featured"><img src="images/pacman.jpg" alt="" /></a>
-						<h3><a href="https://github.com/thelizri/PacmanHardwareEngineering">Pacman on Microcontroller</a></h3>
+						<a href="https://github.com/thelizri/PacmanHardwareEngineering" class="image featured"><img
+								src="images/pacman.jpg" alt="" /></a>
+						<h3><a href="https://github.com/thelizri/PacmanHardwareEngineering">Pacman on
+								Microcontroller</a></h3>
 						<p>A small pacman game built on a microcontroller.</p>
 					</article>
 				</div>
@@ -181,7 +185,7 @@
 			</header>
 			<div class="row">
 				<div class="col-12">
-					<form method="post" action="#">
+					<form action="https://formspree.io/f/mqkojrav" method="POST">
 						<div class="row">
 							<div class="col-6 col-12-small">
 								<input type="text" name="name" id="name" placeholder="Name" />
@@ -208,8 +212,10 @@
 					<hr />
 					<h3>Find me on ...</h3>
 					<ul class="social">
-						<li><a href="https://www.linkedin.com/in/william-c-779a63244/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/thelizri" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/william-c-779a63244/"
+								class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/thelizri" class="icon brands fa-github"><span
+									class="label">Github</span></a></li>
 					</ul>
 					<hr />
 				</div>
