--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
+						<a href="https://github.com/thelizri/SmartEnviro-Control" class="image featured"><img
+								src="images/smartenviro-control.png" alt="" /></a>
+						<h3><a href="https://github.com/thelizri/SmartEnviro-Control"> SmartEnviro-Control
+						</a></h3>
+						<p>Small IoT project. Turns on desk fan automatically and keeps track of temperature and humidity.</p>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
 						<a href="https://github.com/thelizri/PotBot" class="image featured"><img
 								src="images/raspberry.jpg" alt="" /></a>
 						<h3><a href="https://github.com/thelizri/PotBot">Self-Watering Plant</a></h3>
