--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
+						<a href="https://github.com/thelizri/FlutterWeatherApp" class="image featured"><img
+								src="images/weather.png" alt="" /></a>
+						<h3><a href="https://github.com/thelizri/FlutterWeatherApp"> Weather App
+						</a></h3>
+						<p>Weather App built in Flutter for fun.</p>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
 						<a href="https://github.com/thelizri/SmartEnviro-Control" class="image featured"><img
 								src="images/smartenviro-control.png" alt="" /></a>
 						<h3><a href="https://github.com/thelizri/SmartEnviro-Control"> SmartEnviro-Control
